--- a/Propelrr-Exam/Base.lproj/Main.storyboard
+++ b/Propelrr-Exam/Base.lproj/Main.storyboard
@@ -17,36 +17,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9VI-JJ-VGT">
-                                <rect key="frame" x="40" y="84" width="98" height="34"/>
+                                <rect key="frame" x="40" y="84" width="334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Middle Initial" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D0y-sn-5O4">
-                                <rect key="frame" x="40" y="133" width="109.5" height="34"/>
+                                <rect key="frame" x="40" y="133" width="334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vPh-fb-BCt">
-                                <rect key="frame" x="40" y="182" width="97" height="34"/>
+                                <rect key="frame" x="40" y="182" width="334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </textField>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="RiT-rK-WkR">
-                                <rect key="frame" x="47" y="329" width="320" height="216"/>
-                            </datePicker>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xna-lB-zAO">
-                                <rect key="frame" x="40" y="280" width="62.5" height="34"/>
+                                <rect key="frame" x="40" y="280" width="334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mobile Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qdP-eO-xb1">
-                                <rect key="frame" x="40" y="231" width="127" height="34"/>
+                                <rect key="frame" x="40" y="231" width="334" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age Result" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wpo-C2-KS5">
-                                <rect key="frame" x="166.5" y="596" width="81.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wpo-C2-KS5">
+                                <rect key="frame" x="199" y="596" width="16.5" height="31.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -56,55 +53,44 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Information:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfV-ME-4qi">
-                                <rect key="frame" x="40" y="682" width="92" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Information Result" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jgz-24-MRc">
-                                <rect key="frame" x="40" y="711" width="139" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2T-ka-4e0">
-                                <rect key="frame" x="182.5" y="632" width="49" height="30"/>
-                                <state key="normal" title="Submit"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="jCZ-dN-4nW">
+                                <rect key="frame" x="47" y="329" width="320" height="216"/>
                                 <connections>
-                                    <action selector="submitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D1K-5E-Kpd"/>
+                                    <action selector="datePickerChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="xrZ-cr-4l2"/>
                                 </connections>
-                            </button>
+                            </datePicker>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qdP-eO-xb1" secondAttribute="trailing" constant="40" id="2s5-7I-SQU"/>
                             <constraint firstItem="qdP-eO-xb1" firstAttribute="top" secondItem="vPh-fb-BCt" secondAttribute="bottom" constant="15" id="5ZL-MM-7K3"/>
-                            <constraint firstItem="l8s-wL-0zF" firstAttribute="top" secondItem="RiT-rK-WkR" secondAttribute="bottom" constant="15" id="AfL-KR-IV5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9VI-JJ-VGT" secondAttribute="trailing" constant="40" id="B9c-9U-tBS"/>
                             <constraint firstItem="qdP-eO-xb1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="CW1-qU-gfX"/>
+                            <constraint firstItem="jCZ-dN-4nW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Enp-FH-kCG"/>
                             <constraint firstItem="D0y-sn-5O4" firstAttribute="top" secondItem="9VI-JJ-VGT" secondAttribute="bottom" constant="15" id="FqE-hB-pFX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xna-lB-zAO" secondAttribute="trailing" constant="40" id="GHZ-Yx-l0N"/>
+                            <constraint firstItem="l8s-wL-0zF" firstAttribute="top" secondItem="jCZ-dN-4nW" secondAttribute="bottom" constant="15" id="Giq-BH-6eL"/>
                             <constraint firstItem="9VI-JJ-VGT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="PT8-fG-4k1"/>
                             <constraint firstItem="Xna-lB-zAO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="PYY-Z3-YBG"/>
                             <constraint firstItem="vPh-fb-BCt" firstAttribute="top" secondItem="D0y-sn-5O4" secondAttribute="bottom" constant="15" id="QKy-ll-K4u"/>
-                            <constraint firstItem="z2T-ka-4e0" firstAttribute="top" secondItem="Wpo-C2-KS5" secondAttribute="bottom" constant="15" id="Rqd-ID-1xt"/>
                             <constraint firstItem="vPh-fb-BCt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="SPM-tg-yr6"/>
                             <constraint firstItem="Xna-lB-zAO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="ZdA-5W-0p3"/>
-                            <constraint firstItem="z2T-ka-4e0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="alc-Fe-d70"/>
+                            <constraint firstItem="jCZ-dN-4nW" firstAttribute="top" secondItem="Xna-lB-zAO" secondAttribute="bottom" constant="15" id="cth-cl-bNT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vPh-fb-BCt" secondAttribute="trailing" constant="40" id="gUm-qu-Lft"/>
                             <constraint firstItem="D0y-sn-5O4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="h4H-rd-KYy"/>
                             <constraint firstItem="Wpo-C2-KS5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iVA-p0-nZP"/>
                             <constraint firstItem="l8s-wL-0zF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nsS-NQ-2Hu"/>
-                            <constraint firstItem="RiT-rK-WkR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="osH-3Q-i5G"/>
                             <constraint firstItem="qdP-eO-xb1" firstAttribute="top" secondItem="vPh-fb-BCt" secondAttribute="bottom" constant="15" id="pfg-RX-sNp"/>
-                            <constraint firstItem="RiT-rK-WkR" firstAttribute="top" secondItem="Xna-lB-zAO" secondAttribute="bottom" constant="15" id="qmc-TT-PVc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="D0y-sn-5O4" secondAttribute="trailing" constant="40" id="tbd-ty-DIw"/>
                             <constraint firstItem="9VI-JJ-VGT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="vhN-ci-1wk"/>
                             <constraint firstItem="Wpo-C2-KS5" firstAttribute="top" secondItem="l8s-wL-0zF" secondAttribute="bottom" constant="15" id="waG-P8-0iz"/>
                             <constraint firstItem="Xna-lB-zAO" firstAttribute="top" secondItem="qdP-eO-xb1" secondAttribute="bottom" constant="15" id="xMS-jy-VVF"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="birthDate" destination="RiT-rK-WkR" id="ocR-K8-Ocv"/>
+                        <outlet property="ageResult" destination="Wpo-C2-KS5" id="WlX-ih-6gO"/>
+                        <outlet property="birthDate" destination="jCZ-dN-4nW" id="fhV-5s-yqb"/>
                         <outlet property="emailAd" destination="Xna-lB-zAO" id="0ZZ-MZ-xx5"/>
                         <outlet property="firstName" destination="9VI-JJ-VGT" id="6nc-DU-aJN"/>
                         <outlet property="lastName" destination="vPh-fb-BCt" id="0QY-S2-Dzk"/>
